loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-argocd-server
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
